CHANGELOG listcommands
======================

RELEASE 2.0
-----------

- bugfix: change imap_init to storage_init
